--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,38 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  color: aliceblue;
 }
+/* NAVBAR */
+.navbar {
+  display: flex;
+  width: 100%;
+  top: 0;
+  height: 0;
+  position: absolute;
+  justify-content: space-between;
+  padding: 20px;
+  color: whitesmoke;
+}
+.active {
+  text-decoration: underline;
+  color: #fc036b;
+  font-weight: bold;
+}
+a {
+  text-decoration: none;
+}
+ul {
+  list-style: none;
+}
+.nav-links {
+  display: flex;
+  align-items: center;
+}
+.nav-links li {
+  margin: 0 30px;
+}
+
 header {
   width: 100vw;
   height: 100vh;
@@ -41,4 +72,43 @@ a {
   background-color: #fc036b;
   border-radius: 30px;
   color: whitesmoke;
+}
+.menu-btn {
+  position: absolute;
+  top: 30px;
+  right: 30px;
+  width: 40px;
+  cursor: pointer;
+  display: none;
+}
+/* media query */
+@media only screen and (max-width: 600px) {
+  .navbar {
+    padding: 0;
+  }
+  .logo {
+    position: absolute;
+    top: 30px;
+    left: 30px;
+  }
+  .menu-btn {
+    display: block;
+  }
+  .nav-links {
+    flex-direction: column;
+    width: 100%;
+    height: 100vh;
+    justify-content: center;
+    background: #484877;
+    margin-top: -900px;
+    transition: all 2s ease;
+  }
+  .mobile-menu {
+    margin-top: 0px;
+    border-bottom-left-radius: 90px;
+    border-bottom-right-radius: 90px;
+  }
+  .nav-links li {
+    margin: 30px auto;
+  }
 }
