--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,10 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  color: aliceblue;
+}
+body,
+html {
+  overflow-x: hidden;
 }
 /* NAVBAR */
 .navbar {
@@ -81,6 +84,126 @@ a {
   cursor: pointer;
   display: none;
 }
+/* Events */
+
+section {
+  width: 80%;
+  margin: 80px auto;
+}
+.title {
+  text-align: center;
+  font-size: 4vmin;
+  color: red;
+}
+.title > h1 {
+  color: red;
+}
+.row {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  justify-content: space-between;
+}
+.row .col {
+  width: 80%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.events .row {
+  margin-top: 50px;
+}
+h4 {
+  font-size: 3vmin;
+  color: #484877;
+  margin: 20px auto;
+}
+p {
+  color: #7c7c7c;
+  padding: 0px 40px;
+}
+.events .ctn {
+  margin-top: 30px;
+}
+
+/* explore */
+.explore {
+  width: 100%;
+  height: 100vh;
+  background-image: url(./img/bg2.png);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+.explore-content {
+  width: 60%;
+  padding: 50px;
+  color: whitesmoke;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+.explore-content h1 {
+  font-size: 7vmin;
+  margin-top: 30%;
+}
+.explore-content p {
+  color: white;
+}
+.explore-content .ctn {
+  margin-top: 40px;
+}
+.explore-content .line {
+  margin-bottom: 50px;
+}
+/* Tourse */
+
+.tourse .image-gallery {
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  align-items: center;
+}
+.image-gallery img {
+  max-width: 250px;
+  margin: 10px;
+}
+
+.contnet-col {
+  width: 40%;
+}
+.image-col {
+  width: 60%;
+}
+.content-col h1 {
+  font-size: 7vmin;
+  color: black;
+  text-transform: capitalize;
+}
+.content-col .line {
+  margin-left: -1px;
+}
+.content-col p {
+  padding: 0;
+  margin: 30px auto;
+}
+.content-col .ctn {
+  margin-left: -100px;
+}
+.footer{
+  width: 100%;
+  height: 200px;
+  padding: 20px 80px;
+  margin: 0;
+  background: #7c7c7c;
+  text-align: center;
+  color: aliceblue;
+}
+.footer p{
+  color: aliceblue;
+margin: 20px auto;
+}
+
 /* media query */
 @media only screen and (max-width: 600px) {
   .navbar {
