--- a/styles.css
+++ b/styles.css
@@ -190,7 +190,7 @@ p {
 .content-col .ctn {
   margin-left: -100px;
 }
-.footer{
+.footer {
   width: 100%;
   height: 200px;
   padding: 20px 80px;
@@ -199,9 +199,9 @@ p {
   text-align: center;
   color: aliceblue;
 }
-.footer p{
+.footer p {
   color: aliceblue;
-margin: 20px auto;
+  margin: 20px auto;
 }
 
 /* media query */
@@ -234,4 +234,45 @@ margin: 20px auto;
   .nav-links li {
     margin: 30px auto;
   }
+  /* EVENTS */
+  .row {
+    flex-direction: column;
+  }
+  .row .col {
+    margin: 20px auto;
+  }
+  .col img {
+    max-width: 90%;
+  }
+  /* Explore */
+  .explore-content {
+    width: 100%;
+  }
+  .tourse .col {
+    width: 100%;
+  }
+  .image-gallery {
+    justify-content: center;
+    align-items: center;
+  }
+  .image-gallery img {
+    width: 98%;
+  }
+  .footer {
+    padding: 10px;
+  }
+}
+
+/* Aniamtions */
+img {
+  transition: transform 0.3s ease;
+}
+
+img:hover{
+transform: scale(1.2);
+}
+.ctn:hover{
+  background: salmon;
+  color: wheat;
+  box-shadow: 2px 2px 2px #00056;
 }
